k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-express-app-service
spec:
  selector:
    app: my-express-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
