k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-express-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-express-app.example.com
      http:
        paths:
          - path: /route1
            pathType: Prefix
            backend:
              service:
                name: my-express-app-service
                port:
                  number: 3000
          - path: /route2
            pathType: Prefix
            backend:
              service:
                name: my-express-app-service
                port:
                  number: 3000
